# jp2a

./: .dockerignore  .gitignore  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  README  configure.ac
.github/workflows/: full-check.yml  publish-docker-image.yml
completion/bash/: jp2a
include/: aspect_ratio.h  curl.h  html.h  image.h  jp2a.h  options.h  round.h  terminal.h
man/: jp2a.1
src/: CMakeLists.txt  aspect_ratio.c  curl.c  html.c  image.c  jp2a.c  options.c  terminal.c
tests/: dalsnuten-256-light-x.html  dalsnuten-256-x.html  dalsnuten-color-x.html  dalsnuten-color.html  grind-2grayscale-fill-x.html  grind-2grayscale-fill.html  grind-2grayscale-x.html  grind-2grayscale.html  grind-color-dark-fill-x.html  grind-color-dark-fill.html  grind-color-dark-x.html  grind-color-dark.html  grind-color-x.html  grind-color.html  grind-flipx-x.html  grind-flipx.html  grind-flipxy-x.html  grind-flipxy.html  grind-flipy-x.html  grind-flipy.html  grind-nobold-x.html  grind-nobold.html  html-title.txt  run-tests.sh
